--- a/_config.yml
+++ b/_config.yml
@@ -35,4 +35,5 @@ plugins:
 # A list of the pages to display in the navigation bar
 header_pages:
   - index.md
+  - content/constitution.md
   - History.md
