--- a/_config.yml
+++ b/_config.yml
@@ -25,6 +25,8 @@ description: >- # this means to ignore newlines until "baseurl:"
 #twitter_username: jekyllrb
 #github_username:  jekyll
 
+permalink: /:title
+
 repository: "pe5er/gw3uws_website"
 
 # Build settings
