--- a/_config.yml
+++ b/_config.yml
@@ -37,5 +37,5 @@ plugins:
 # A list of the pages to display in the navigation bar
 header_pages:
   - index.md
-  - content/constitution.md
-  - History.md
+  - /content/constitution.md
+  - history.md
