--- a/_config.yml
+++ b/_config.yml
@@ -43,3 +43,8 @@ header_pages:
   - _pages/constitution.md
   - constitution.md
   - history.md
+  
+  collections:
+    pagse:
+      output: true
+      permalink: /:title
