--- a/_config.yml
+++ b/_config.yml
@@ -44,7 +44,7 @@ header_pages:
   - _pages/history.md
   - licences/foundation.md
   
-  collections:
-    pages:
-      output: true
-      permalink: /:title
+ # collections:
+  #  pages:
+   #   output: true
+    #  permalink: /:title
